--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,50 +1,65 @@
-name: Docker Image CI with Tag
+name: Docker
+
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+permissions:
+  contents: read
+  packages: write
+  attestations: write
+  id-token: write
+
+env:
+  CACHE_REPO: ghcr.io/cubismod/grafana-backup-tool/cache
+  REPO: ghcr.io/cubismod/grafana-backup-tool
 
 on:
   push:
-    tags:
-      - '*'
+    branches: ["main"]
+  pull_request:
+  merge_group:
 
 jobs:
-  push_to_registry:
-    name: Push tagged docker image to dockerhub
+  build-main:
+    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      - uses: actions/checkout@master
+      - name: login to ghcr
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3
+      - name: build and push
+        uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6
         with:
-          images: ysde/docker-grafana-backup-tool
-
-      - name: Extract metadata (tags, labels) for Docker (Slim version)
-        id: meta_slim
-        uses: docker/metadata-action@v4
-        with:
-          images: ysde/docker-grafana-backup-tool
-          flavor: |
-            latest=auto
-            suffix=-slim,onlatest=true
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
+          context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Build and push Docker image slim version
-        uses: docker/build-push-action@v4
+          tags: ${{ env.REPO }}:${{ github.sha }},${{ env.REPO }}:latest,${{ env.REPO }}:dev-latest
+          cache-from: type=registry,ref=${{ env.CACHE_REPO }}
+          cache-to: type=registry,ref=${{ env.CACHE_REPO }},mode=max
+  pr-check:
+    if: startsWith(github.ref, 'refs/pull/')
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: login to ghcr
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3
         with:
-          file: ./DockerfileSlim
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3
+      - name: build and push
+        uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6
+        with:
+          context: .
           push: true
-          tags: ${{ steps.meta_slim.outputs.tags }}
-          labels: ${{ steps.meta_slim.outputs.labels }}
+          tags: ${{ env.REPO }}:${{ github.sha }},${{ env.REPO }}:dev-latest
+          cache-from: type=registry,ref=${{ env.CACHE_REPO }}
+          cache-to: type=registry,ref=${{ env.CACHE_REPO }},mode=max
