update branch names

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,13 +16,13 @@ env:
 
 on:
   push:
-    branches: ["main"]
+    branches: ["master"]
   pull_request:
   merge_group:
 
 jobs:
-  build-main:
-    if: github.ref_name == 'main'
+  build-master:
+    if: github.ref_name == 'master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
